# Lithium

./: Cargo.toml  main.lisp
.cargo/: config.toml
example/: conditional.lith
src/: builtins.rs  clause.rs  core.rs  eval.rs  identifiers.rs  lib.rs  macros.rs  main.rs  namespace.rs  parser.rs  prim.rs  primitive.rs  primitives.rs  reducers.rs  token.rs
src/environment/: builtins.rs  mod.rs  namespace.rs
src/grunt/: parser.rs  tokens.rs
src/interface/: eval.rs  mod.rs  substitution.rs
src/primitive/: atom.rs  function.rs  keyword.rs  mod.rs  operator.rs  symbol.rs
src/primitive/structure/: cell.rs  clause.rs  mod.rs
tests/: parser.rs
