[package]
name = "lithium"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[[bin]]
name = "lithium-repl"
path = "src/bin/repl.rs"

[[test]]
name = "parser-tests"
path = "tests/parser.rs"

[lib]
name = "lithium"
path = "src/lib.rs"

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
rustyline = "13.0.0"
nom = "7.0"
